--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -41,7 +41,7 @@ jobs:
         run: |
           mkdir -p ${{ github.event.inputs.folder }}
           shopt -s extglob
-          cp -r !( ${github.event.inputs.folder} ) ${{ github.event.inputs.folder }}
+          cp -r -- !( ${github.event.inputs.folder} ) ${{ github.event.inputs.folder }}
 
       - name: Commit and push changes
         run: |
