--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -39,9 +39,8 @@ jobs:
 
       - name: Deploy to folder
         run: |
-          rm -rf ${{ github.event.inputs.folder }}
           mkdir -p ${{ github.event.inputs.folder }}
-          cp -r build/* ${{ github.event.inputs.folder }}
+          rsync -av --progress --exclude="${{ github.event.inputs.folder }}" build/* ${{ github.event.inputs.folder }}
 
       - name: Commit and push changes
         run: |
