--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -35,12 +35,13 @@ jobs:
         run: npm install # Or the relevant install command for your project
 
       - name: Build the project (if needed)
-        run: npm run build # Or the relevant build command for your project
+        run: BUILD_PATH='./tempdist' npm run build # Or the relevant build command for your project
 
       - name: Deploy to folder
         run: |
           mkdir -p ${{ github.event.inputs.folder }}
-          rsync -av --progress --exclude="${{ github.event.inputs.folder }}" build/* ${{ github.event.inputs.folder }}
+          cp -r tempdist/* ${{ github.event.inputs.folder }}
+          rm -rf tempdist
 
       - name: Commit and push changes
         run: |
